RESOLVED FIXED12120
REGRESSION(r18605): Safari snippet editor no longer works
https://bugs.webkit.org/show_bug.cgi?id=12120
Summary REGRESSION(r18605): Safari snippet editor no longer works
Mark Rowe (bdash)
Reported 2007-01-04 19:59:12 PST
Steps to reproduce: 1. Show the snippet editor. 2. Type in some HTML markup (<b>Some text</b> will suffice) 3. Hit 'Show' Expected results: The HTML should be loaded + displayed in the web view. Actual results: No HTML is displayed.
Attachments
Anders Carlsson
Comment 1 2007-01-04 21:30:39 PST
Committed revision 18607.
Mark Rowe (bdash)
Comment 2 2007-01-04 22:17:06 PST
Brady rolled this fix out in r18609 as it broke.... nearly everything other than applewebdata: URLs.
David Kilzer (:ddkilzer)
Comment 3 2007-01-04 22:59:59 PST
Is this related in any way to Bug 11961?
Mark Rowe (bdash)
Comment 4 2007-01-04 23:02:14 PST
Unlikely -- this broke today with r18605, while the issue discussed in bug 11961 has been happening for some time.
Anders Carlsson
Comment 5 2007-01-05 11:19:56 PST
Fixed again in r18619
Note You need to log in before you can comment on or make changes to this bug.