        Reviewed by Adam.

http://bugs.webkit.org/show_bug.cgi?id=12120
        REGRESSION(r18605): Safari snippet editor no longer works

        * loader/mac/ResourceLoaderMac.mm:
        (WebCore::ResourceLoader::willSendRequest):
        Fix logic so applewebdata: URLs no longer cause the underlying URL to be fetched .



Canonical link: https://commits.webkit.org/15632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18607 268f45cc-cd09-0410-ab3c-d52691b4dbfc